remove Not applicable and Dont know

--- a/notebooks/streamlit_params.ipynb
+++ b/notebooks/streamlit_params.ipynb
@@ -638,94 +638,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'TYPEHUQ': {'Mobile home': '1',\n",
-       "  'Single-family house detached from any other house ': '2',\n",
-       "  'Single-family house attached to one or more other houses (for example: duplex, row house, or townhome)': '3',\n",
-       "  'Apartment in a building with 2 to 4 units': '4',\n",
-       "  'Apartment in a building with 5 or more units': '5'},\n",
-       " 'STORIES': {'One story': '1',\n",
-       "  'Two stories': '2',\n",
-       "  'Three stories': '3',\n",
-       "  'Four or more stories': '4',\n",
-       "  'Split-level': '5',\n",
-       "  'Not applicable': '-2'},\n",
-       " 'YEARMADERANGE': {'Before 1950': '1',\n",
-       "  '1950 to 1959': '2',\n",
-       "  '1960 to 1969': '3',\n",
-       "  '1970 to 1979': '4',\n",
-       "  '1980 to 1989': '5',\n",
-       "  '1990 to 1999': '6',\n",
-       "  '2000 to 2009': '7',\n",
-       "  '2010 to 2015': '8',\n",
-       "  '2016 to 2020': '9'},\n",
-       " 'WALLTYPE': {'Brick': '1',\n",
-       "  'Wood': '2',\n",
-       "  'Siding (aluminum, fiber cement, vinyl, or steel) ': '3',\n",
-       "  'Stucco': '4',\n",
-       "  'Shingle (composition)': '5',\n",
-       "  'Stone ': '6',\n",
-       "  'Concrete block ': '7',\n",
-       "  'Other': '99'},\n",
-       " 'ROOFTYPE': {'Ceramic or clay tiles': '1',\n",
-       "  'Wood shingles/shakes': '2',\n",
-       "  'Metal': '3',\n",
-       "  'Slate or synthetic slate': '4',\n",
-       "  'Shingles (composition or asphalt)': '5',\n",
-       "  'Concrete tiles': '6',\n",
-       "  'Other': '99',\n",
-       "  'Not applicable': '-2'},\n",
-       " 'WINDOWS': {'1 or 2 windows': '1',\n",
-       "  '3 to 5 windows': '2',\n",
-       "  '6 to 9 windows': '3',\n",
-       "  '10 to 15 windows': '4',\n",
-       "  '16 to 19 windows': '5',\n",
-       "  '20 to 29 windows': '6',\n",
-       "  '30 or more windows': '7'},\n",
-       " 'SWIMPOOL': {'Yes': '1', 'No': '0', 'Not applicable': '-2'},\n",
-       " 'DISHWASH': {'Yes': '1', 'No': '0'},\n",
-       " 'CWASHER': {'Yes': '1', 'No': '0'},\n",
-       " 'DRYER': {'Yes': '1', 'No': '0'},\n",
-       " 'TELLWORK': {'Yes': '1', 'No': '0'},\n",
-       " 'HEATHOME': {'Yes': '1', 'No': '0'},\n",
-       " 'EQUIPM': {'Central furnace ': '3',\n",
-       "  'Steam or hot water system with radiators or pipes ': '2',\n",
-       "  'Central heat pump': '4',\n",
-       "  'Ductless heat pump, also known as a “mini-split”': '13',\n",
-       "  'Built-in electric units installed in walls, ceilings, baseboards, or floors': '5',\n",
-       "  'Built-in room heater burning gas or oil': '7',\n",
-       "  'Wood or pellet stove ': '8',\n",
-       "  'Portable electric heaters': '10',\n",
-       "  'Other ': '99',\n",
-       "  'Not applicable': '-2'},\n",
-       " 'AIRCOND': {'Yes': '1', 'No': '0'},\n",
-       " 'SMARTMETER': {'Yes': '1', 'No': '0', \"Don't Know\": '-4'},\n",
-       " 'SOLAR': {'Yes': '1', 'No': '0', 'Not applicable': '-2'},\n",
-       " 'NUMPORTEL': {'0': '0',\n",
-       "  '1': '1',\n",
-       "  '2': '2',\n",
-       "  '3': '3',\n",
-       "  '4': '4',\n",
-       "  '5': '5',\n",
-       "  '6': '6',\n",
-       "  '7': '7',\n",
-       "  '8': '8',\n",
-       "  '9': '9',\n",
-       "  'Not applicable': '-2'}}"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "mapped_features #direction : from text to int\n"
+    "#mapped_features #direction : from text to int\n"
    ]
   },
   {
@@ -796,74 +713,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'AL': 'Alabama',\n",
-       " 'AK': 'Alaska',\n",
-       " 'AZ': 'Arizona',\n",
-       " 'AR': 'Arkansas',\n",
-       " 'CA': 'California',\n",
-       " 'CO': 'Colorado',\n",
-       " 'CT': 'Connecticut',\n",
-       " 'DE': 'Delaware',\n",
-       " 'DC': 'District of Columbia',\n",
-       " 'FL': 'Florida',\n",
-       " 'GA': 'Georgia',\n",
-       " 'HI': 'Hawaii',\n",
-       " 'ID': 'Idaho',\n",
-       " 'IL': 'Illinois',\n",
-       " 'IN': 'Indiana',\n",
-       " 'IA': 'Iowa',\n",
-       " 'KS': 'Kansas',\n",
-       " 'KY': 'Kentucky',\n",
-       " 'LA': 'Louisiana',\n",
-       " 'ME': 'Maine',\n",
-       " 'MD': 'Maryland',\n",
-       " 'MA': 'Massachusetts',\n",
-       " 'MI': 'Michigan',\n",
-       " 'MN': 'Minnesota',\n",
-       " 'MS': 'Mississippi',\n",
-       " 'MO': 'Missouri',\n",
-       " 'MT': 'Montana',\n",
-       " 'NE': 'Nebraska',\n",
-       " 'NV': 'Nevada',\n",
-       " 'NH': 'New Hampshire',\n",
-       " 'NJ': 'New Jersey',\n",
-       " 'NM': 'New Mexico',\n",
-       " 'NY': 'New York',\n",
-       " 'NC': 'North Carolina',\n",
-       " 'ND': 'North Dakota',\n",
-       " 'OH': 'Ohio',\n",
-       " 'OK': 'Oklahoma',\n",
-       " 'OR': 'Oregon',\n",
-       " 'PA': 'Pennsylvania',\n",
-       " 'RI': 'Rhode Island',\n",
-       " 'SC': 'South Carolina',\n",
-       " 'SD': 'South Dakota',\n",
-       " 'TN': 'Tennessee',\n",
-       " 'TX': 'Texas',\n",
-       " 'UT': 'Utah',\n",
-       " 'VT': 'Vermont',\n",
-       " 'VA': 'Virginia',\n",
-       " 'WA': 'Washington',\n",
-       " 'WV': 'West Virginia',\n",
-       " 'WI': 'Wisconsin',\n",
-       " 'WY': 'Wyoming'}"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#state_dictionary.drop(columns='STATE_FIPS').set_index('state_postal').to_dict('state_name')\n",
     "\n",
-    "{code:state for code, state in zip(state_dictionary.state_postal, state_dictionary.state_name)}\n",
+    "#{code:state for code, state in zip(state_dictionary.state_postal, state_dictionary.state_name)}\n",
     "# faster\n",
     "#df.set_index(KEY).to_dict()[VALUE]\n",
     "#https://stackoverflow.com/questions/17426292/how-to-create-a-dictionary-of-two-pandas-dataframe-columns#17426500\n"
@@ -890,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -920,7 +776,90 @@
     "print('# state to most frequent climate mapper')\n",
     "print(f'climate_dict = {climate_dict}')\n",
     "print('# section to features mapper')\n",
-    "print(f'section_dict = {section_dict}')\n"
+    "print(f'section_dict = {section_dict}')\n",
+    "#print('-------------------')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "any([x in [1,2,3] for x in [1,2]])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "#### delete Non applicable and Dont know"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "STORIES {'One story': '1', 'Two stories': '2', 'Three stories': '3', 'Four or more stories': '4', 'Split-level': '5', 'Not applicable': '-2'}\n",
+      "STORIES {'One story': '1', 'Two stories': '2', 'Three stories': '3', 'Four or more stories': '4', 'Split-level': '5'}\n",
+      "ROOFTYPE {'Ceramic or clay tiles': '1', 'Wood shingles/shakes': '2', 'Metal': '3', 'Slate or synthetic slate': '4', 'Shingles (composition or asphalt)': '5', 'Concrete tiles': '6', 'Other': '99', 'Not applicable': '-2'}\n",
+      "ROOFTYPE {'Ceramic or clay tiles': '1', 'Wood shingles/shakes': '2', 'Metal': '3', 'Slate or synthetic slate': '4', 'Shingles (composition or asphalt)': '5', 'Concrete tiles': '6', 'Other': '99'}\n",
+      "SWIMPOOL {'Yes': '1', 'No': '0', 'Not applicable': '-2'}\n",
+      "SWIMPOOL {'Yes': '1', 'No': '0'}\n",
+      "EQUIPM {'Central furnace ': '3', 'Steam or hot water system with radiators or pipes ': '2', 'Central heat pump': '4', 'Ductless heat pump, also known as a “mini-split”': '13', 'Built-in electric units installed in walls, ceilings, baseboards, or floors': '5', 'Built-in room heater burning gas or oil': '7', 'Wood or pellet stove ': '8', 'Portable electric heaters': '10', 'Other ': '99', 'Not applicable': '-2'}\n",
+      "EQUIPM {'Central furnace ': '3', 'Steam or hot water system with radiators or pipes ': '2', 'Central heat pump': '4', 'Ductless heat pump, also known as a “mini-split”': '13', 'Built-in electric units installed in walls, ceilings, baseboards, or floors': '5', 'Built-in room heater burning gas or oil': '7', 'Wood or pellet stove ': '8', 'Portable electric heaters': '10', 'Other ': '99'}\n",
+      "SMARTMETER {'Yes': '1', 'No': '0', \"Don't Know\": '-4'}\n",
+      "SMARTMETER {'Yes': '1', 'No': '0'}\n",
+      "SOLAR {'Yes': '1', 'No': '0', 'Not applicable': '-2'}\n",
+      "SOLAR {'Yes': '1', 'No': '0'}\n",
+      "NUMPORTEL {'0': '0', '1': '1', '2': '2', '3': '3', '4': '4', '5': '5', '6': '6', '7': '7', '8': '8', '9': '9', 'Not applicable': '-2'}\n",
+      "NUMPORTEL {'0': '0', '1': '1', '2': '2', '3': '3', '4': '4', '5': '5', '6': '6', '7': '7', '8': '8', '9': '9'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# loop over dictionary of dictionaries\n",
+    "for feature, value in mapped_features.items():\n",
+    "    for key in [\"Not applicable\", \"Don't Know\"]:\n",
+    "        if key in value.keys():\n",
+    "            print(feature,value)\n",
+    "            del value[key]\n",
+    "            print(feature,value)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mapped_features = {'TYPEHUQ': {'Mobile home': '1', 'Single-family house detached from any other house ': '2', 'Single-family house attached to one or more other houses (for example: duplex, row house, or townhome)': '3', 'Apartment in a building with 2 to 4 units': '4', 'Apartment in a building with 5 or more units': '5'}, 'STORIES': {'One story': '1', 'Two stories': '2', 'Three stories': '3', 'Four or more stories': '4', 'Split-level': '5'}, 'YEARMADERANGE': {'Before 1950': '1', '1950 to 1959': '2', '1960 to 1969': '3', '1970 to 1979': '4', '1980 to 1989': '5', '1990 to 1999': '6', '2000 to 2009': '7', '2010 to 2015': '8', '2016 to 2020': '9'}, 'WALLTYPE': {'Brick': '1', 'Wood': '2', 'Siding (aluminum, fiber cement, vinyl, or steel) ': '3', 'Stucco': '4', 'Shingle (composition)': '5', 'Stone ': '6', 'Concrete block ': '7', 'Other': '99'}, 'ROOFTYPE': {'Ceramic or clay tiles': '1', 'Wood shingles/shakes': '2', 'Metal': '3', 'Slate or synthetic slate': '4', 'Shingles (composition or asphalt)': '5', 'Concrete tiles': '6', 'Other': '99'}, 'WINDOWS': {'1 or 2 windows': '1', '3 to 5 windows': '2', '6 to 9 windows': '3', '10 to 15 windows': '4', '16 to 19 windows': '5', '20 to 29 windows': '6', '30 or more windows': '7'}, 'SWIMPOOL': {'Yes': '1', 'No': '0'}, 'DISHWASH': {'Yes': '1', 'No': '0'}, 'CWASHER': {'Yes': '1', 'No': '0'}, 'DRYER': {'Yes': '1', 'No': '0'}, 'TELLWORK': {'Yes': '1', 'No': '0'}, 'HEATHOME': {'Yes': '1', 'No': '0'}, 'EQUIPM': {'Central furnace ': '3', 'Steam or hot water system with radiators or pipes ': '2', 'Central heat pump': '4', 'Ductless heat pump, also known as a “mini-split”': '13', 'Built-in electric units installed in walls, ceilings, baseboards, or floors': '5', 'Built-in room heater burning gas or oil': '7', 'Wood or pellet stove ': '8', 'Portable electric heaters': '10', 'Other ': '99'}, 'AIRCOND': {'Yes': '1', 'No': '0'}, 'SMARTMETER': {'Yes': '1', 'No': '0'}, 'SOLAR': {'Yes': '1', 'No': '0'}, 'NUMPORTEL': {'0': '0', '1': '1', '2': '2', '3': '3', '4': '4', '5': '5', '6': '6', '7': '7', '8': '8', '9': '9'}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'mapped_features = {mapped_features}')\n"
    ]
   },
   {
