--- a/notebooks/streamlit_params.ipynb
+++ b/notebooks/streamlit_params.ipynb
@@ -646,6 +646,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#yesno_features =\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -860,6 +869,29 @@
    ],
    "source": [
     "print(f'mapped_features = {mapped_features}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "yes_no_features = ['SWIMPOOL', 'DISHWASH', 'CWASHER', 'DRYER', 'TELLWORK', 'HEATHOME', 'AIRCOND', 'SMARTMETER', 'SOLAR']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# yes no features - use toggle!\n",
+    "yes_no_features = []\n",
+    "for feature, value in mapped_features.items():\n",
+    "    if all([key in value.keys() for key in ['Yes','No']]):\n",
+    "            #print(feature,value)\n",
+    "            yes_no_features.append(feature)\n",
+    "print(f'yes_no_features = {yes_no_features}')\n"
    ]
   },
   {
