--- a/notebooks/streamlit_params.ipynb
+++ b/notebooks/streamlit_params.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,8 @@
    "outputs": [],
    "source": [
     "# these columns are currently in the model\n",
-    "model_columns = [\"REGIONC\", \"state_name\", \"BA_climate\", \"TYPEHUQ\", \"STORIES\", \"YEARMADERANGE\", \"NCOMBATH\", \"NHAFBATH\", \"TOTROOMS\", \"WALLTYPE\", \"ROOFTYPE\", \"WINDOWS\",\n",
+    "model_columns = [\"REGIONC\", \"state_name\", \"BA_climate\", \"TYPEHUQ\", \"STORIES\", \"YEARMADERANGE\", \"NCOMBATH\", \"NHAFBATH\", \"TOTROOMS\"#, \"WALLTYPE\", \"ROOFTYPE\"\n",
+    "                 , \"WINDOWS\",\n",
     "           \"SWIMPOOL\", \"NUMFRIG\", \"MICRO\", \"DISHWASH\", \"CWASHER\", \"DRYER\", \"TVCOLOR\", \"DESKTOP\", \"NUMLAPTOP\",\n",
     "           \"TELLWORK\",\"HEATHOME\", \"EQUIPM\", \"NUMPORTEL\", \"AIRCOND\", \"LGTIN1TO4\", \"LGTIN4TO8\", \"LGTINMORE8\", \"SMARTMETER\", \"SOLAR\", \"NHSLDMEM\", \"SQFTEST\"\n",
     "          #,\"KWH\"\n",
