added user price esitmatebased on state

--- a/notebooks/streamlit_params.ipynb
+++ b/notebooks/streamlit_params.ipynb
@@ -1129,6 +1129,84 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "### Prices dict from Diego"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "price_per_state = {'Alabama': 0.1483, 'Alaska': 0.245, 'Arizona': 0.1439, 'Arkansas': 0.1267, 'California': 0.2999, 'Colorado': 0.1503, 'Connecticut': 0.2925, 'Delaware': 0.1583, 'District of Columbia': 0.1628, 'Florida': 0.1551, 'Georgia': 0.1401, 'Hawaii': 0.4152, 'Idaho': 0.116, 'Illinois': 0.1479, 'Indiana': 0.141, 'Iowa': 0.1403, 'Kansas': 0.1346, 'Kentucky': 0.1243, 'Louisiana': 0.1139, 'Maine': 0.2686, 'Maryland': 0.1696, 'Massachusetts': 0.28, 'Michigan': 0.1935, 'Minnesota': 0.1529, 'Mississippi': 0.1305, 'Missouri': 0.1423, 'Montana': 0.1318, 'Nebraska': 0.1239, 'Nevada': 0.1694, 'New Hampshire': 0.2331, 'New Jersey': 0.1802, 'New Mexico': 0.1525, 'New York': 0.2323, 'North Carolina': 0.1409, 'North Dakota': 0.1277, 'Ohio': 0.1568, 'Oklahoma': 0.1325, 'Oregon': 0.1313, 'Pennsylvania': 0.1801, 'Rhode Island': 0.2694, 'South Carolina': 0.1452, 'South Dakota': 0.1305, 'Tennessee': 0.1185, 'Texas': 0.1458, 'Utah': 0.1185, 'Vermont': 0.2121, 'Virginia': 0.1479, 'Washington': 0.1138, 'West Virginia': 0.1438, 'Wisconsin': 0.1732, 'Wyoming': 0.1264}\n"
+     ]
+    }
+   ],
+   "source": [
+    "prices_per_state={'Alabama': 0.1483,\n",
+    " 'Alaska': 0.245,\n",
+    " 'Arizona': 0.1439,\n",
+    " 'Arkansas': 0.1267,\n",
+    " 'California': 0.2999,\n",
+    " 'Colorado': 0.1503,\n",
+    " 'Connecticut': 0.2925,\n",
+    " 'Delaware': 0.1583,\n",
+    " 'District of Columbia': 0.1628,\n",
+    " 'Florida': 0.1551,\n",
+    " 'Georgia': 0.1401,\n",
+    " 'Hawaii': 0.4152,\n",
+    " 'Idaho': 0.116,\n",
+    " 'Illinois': 0.1479,\n",
+    " 'Indiana': 0.141,\n",
+    " 'Iowa': 0.1403,\n",
+    " 'Kansas': 0.1346,\n",
+    " 'Kentucky': 0.1243,\n",
+    " 'Louisiana': 0.1139,\n",
+    " 'Maine': 0.2686,\n",
+    " 'Maryland': 0.1696,\n",
+    " 'Massachusetts': 0.28,\n",
+    " 'Michigan': 0.1935,\n",
+    " 'Minnesota': 0.1529,\n",
+    " 'Mississippi': 0.1305,\n",
+    " 'Missouri': 0.1423,\n",
+    " 'Montana': 0.1318,\n",
+    " 'Nebraska': 0.1239,\n",
+    " 'Nevada': 0.1694,\n",
+    " 'New Hampshire': 0.2331,\n",
+    " 'New Jersey': 0.1802,\n",
+    " 'New Mexico': 0.1525,\n",
+    " 'New York': 0.2323,\n",
+    " 'North Carolina': 0.1409,\n",
+    " 'North Dakota': 0.1277,\n",
+    " 'Ohio': 0.1568,\n",
+    " 'Oklahoma': 0.1325,\n",
+    " 'Oregon': 0.1313,\n",
+    " 'Pennsylvania': 0.1801,\n",
+    " 'Rhode Island': 0.2694,\n",
+    " 'South Carolina': 0.1452,\n",
+    " 'South Dakota': 0.1305,\n",
+    " 'Tennessee': 0.1185,\n",
+    " 'Texas': 0.1458,\n",
+    " 'Utah': 0.1185,\n",
+    " 'Vermont': 0.2121,\n",
+    " 'Virginia': 0.1479,\n",
+    " 'Washington': 0.1138,\n",
+    " 'West Virginia': 0.1438,\n",
+    " 'Wisconsin': 0.1732,\n",
+    " 'Wyoming': 0.1264}\n",
+    "\n",
+    "print(f'price_per_state = {prices_per_state}')\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
