add binary yes-no default values that make sense

--- a/notebooks/streamlit_params.ipynb
+++ b/notebooks/streamlit_params.ipynb
@@ -1361,10 +1361,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['SWIMPOOL',\n",
+       " 'DISHWASH',\n",
+       " 'CWASHER',\n",
+       " 'DRYER',\n",
+       " 'TELLWORK',\n",
+       " 'HEATHOME',\n",
+       " 'AIRCOND',\n",
+       " 'SMARTMETER',\n",
+       " 'SOLAR']"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "yes_no_features\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "binary_defaults={'SWIMPOOL': False, 'DISHWASH': True, 'CWASHER': True, 'DRYER': True, 'TELLWORK': False, 'HEATHOME': True, 'AIRCOND': True, 'SMARTMETER': False, 'SOLAR': False}\n"
+     ]
+    }
+   ],
+   "source": [
+    "binary_defaults = raw[yes_no_features].mode().replace(-4, 0).astype(bool).transpose()[0].to_dict()\n",
+    "print(f'binary_defaults={binary_defaults}')\n"
+   ]
   },
   {
    "cell_type": "markdown",
